Revision history for DBIx-TableLoader

{{$NEXT}}

1.100     2012-12-05T01:59:15Z

  [Bug Fixes]
  - Explicitly rollback the transaction before propagating exceptions
    (if configured to manage transactions)
    rather than leaving the transaction open.
    This leaves the database handle in a more appropriate state
    in case you do something else with it
    after attempting to load a table that throws an exception.

  [Tests]
  - Remove Test::MockObject in favor of reusable test module.

1.003     2012-07-09T19:14:14Z

  - Simplify validation error messages by excluding
    (internal) file/line position when die()ing
    and removing trailing newline when passing message to handler

1.002     2012-07-07T21:49:40Z

  - Enable custom error handling via 'handle_invalid_row' option
  - use Try::Tiny;

1.001     2011-07-14T23:33:27Z

  - Make DBI tests regular tests rather than author tests
  - Superficial dist/release changes

1.000     2011-02-28T04:13:37Z

  - Initial release