@@ -8,3 +8,6 @@ copyright_year    = 2011
 ; TODO
 ;[Prereqs / RuntimeSuggests]
 ;String::CamelCase = 0.02
+
+[Prereqs / DevelopRequires]
+DBD::SQLite = 1.62
