@@ -2,6 +2,8 @@ Revision history for DBIx-TableLoader
 
 {{$NEXT}}
 
+  - Fix test suite for latest DBD::SQLite.
+
 1.100     2012-12-05T01:59:15Z
 
   [Bug Fixes]
